@@ -3,6 +3,9 @@ devscripts (2.10.27) UNRELEASED; urgency=low
   * checkbashisms: When rebuilding the list of bashisms to check, ensure it is
     based on whether the current file is a makefile, rather than whether the
     previous file was. Thanks to Raphael Geissert for the brown paper bag.
+  * debchange: Correctly handle the BTS returning no bugs for a package when
+    --closes is used (either because the package doesn't exist in the archive
+    or it has no open bugs)
   * debcheckout: Use the Vcs-* headers from the highest available version
     rather than the first returned by "apt-get source"
 
